# crustcrawler

./: README.md
cool_crustcrawler_controller/: CMakeLists.txt  package.xml
cool_crustcrawler_controller/config/: cool_crustcrawler.yaml  cool_crustcrawler_gripper_controller.yaml  cool_crustcrawler_trajectory_controller.yaml  dynamixel_ports.yaml
cool_crustcrawler_controller/launch/: cool_crustcrawler_controller.launch  joint_state_aggregator.launch
crustcrawler/: .setup_assistant  CMakeLists.txt  package.xml
crustcrawler/config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
crustcrawler/launch/: crustcrawler_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
crustcrawler_control/: CMakeLists.txt  package.xml
crustcrawler_control/config/: crustcrawler_control.yaml  crustcrawler_control_2.yaml
crustcrawler_control/launch/: crustcrawler_control.launch  crustcrawler_control_2.launch
crustcrawler_control/src/: crustcrawler_command_translator.cpp  crustcrawler_command_translator_for_throwing.cpp  crustcrawler_gripper.cpp
crustcrawler_core_msgs/: CMakeLists.txt  package.xml
crustcrawler_description/meshes/: joint_1.stl  joint_2.stl  joint_4.stl  joint_6.stl
crustcrawler_description/meshes/collada/: arm_left_finger.dae  joint_1.dae  joint_2.dae  joint_4.dae  joint_6.dae
crustcrawler_description/meshes/sensors/: kinect.dae
crustcrawler_description/urdf/: crustcrawler.xacro  crustcrawler_2.gazebo  crustcrawler_arm.xacro  crustcrawler_arm_2.xacro  crustcrawler_arm_box.xacro  crustcrawler_arm_high_speed.xacro  crustcrawler_arm_test.xacro  crustcrawler_arm_test_2.xacro  crustcrawler_arm_working_copy.xacro  crustcrawler_kinect.urdf.xacro
crustcrawler_examples/: CMakeLists.txt  package.xml  setup.py
crustcrawler_examples/scripts/: gripper_keyboard.py
crustcrawler_gazebo/: CMakeLists.txt  package.xml
crustcrawler_gazebo/config/: crustcrawler_gazebo_joint_states.yaml  crustcrawler_grasp_data.yaml  trajectory_control.yaml
crustcrawler_gazebo/launch/: crustcrawler_bringup_grasping.launch  crustcrawler_gazebo_states.launch  crustcrawler_trajectory_controller.launch  crustcrawler_world.launch  crustcrawler_world_grasping.launch  crustcrawler_world_kinect.launch  grasp_generator_server.launch  pick_and_place.launch
crustcrawler_gazebo/scripts/: pick_and_place.py
crustcrawler_gazebo/worlds/: crustcrawler.world  crustcrawler_cubes.world
crustcrawler_hw/: CMakeLists.txt  package.xml
crustcrawler_hw/config/: dynamixel_params.yaml  dynamixel_params_high_speed.yaml
crustcrawler_hw/launch/: dynamixels.launch  dynamixels_moveit.launch  pick_and_place.launch
crustcrawler_hw/scripts/: pick_and_place.py
crustcrawler_hw/src/: dynamixel_joint_state_publisher.py
crustcrawler_interface/: CMakeLists.txt  epydoc.config  package.xml  rosdoc.yaml  setup.py
crustcrawler_interface/cfg/: GripperActionServer.cfg  PositionFFJointTrajectoryActionServer.cfg  PositionJointTrajectoryActionServer.cfg  VelocityJointTrajectoryActionServer.cfg
crustcrawler_interface/launch/: joint_trajectory_action_server.launch
crustcrawler_interface/scripts/: gripper_action_server.py  joint_trajectory_action_server.py
crustcrawler_interface/src/: joint_trajectory_action_server.cpp
crustcrawler_interface/src/crustcrawler_control/: __init__.py  pid.py
crustcrawler_interface/src/crustcrawler_dataflow/: __init__.py  signals.py
crustcrawler_interface/src/crustcrawler_interface/: __init__.py  gripper.py  limb.py  robust_controller.py  settings.py
crustcrawler_interface/src/gripper_action/: gripper_action.py
crustcrawler_interface/src/joint_trajectory_action/: joint_trajectory_action.py
crustcrawler_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
crustcrawler_moveit_config/config/: controllers.yaml  crustcrawler.srdf  crustcrawler_controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinect2_sensor.yaml  kinect_sensor.yaml  ompl_planning.yaml  xtion_sensor.yaml
crustcrawler_moveit_config/launch/: crustcrawler_moveit_controller_manager.launch.xml  crustcrawler_moveit_sensor_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
crustcrawler_moveit_config_grasping/: .setup_assistant  CMakeLists.txt  package.xml
crustcrawler_moveit_config_grasping/config/: controllers.yaml  controllers_2.yaml  crustcrawler.srdf  crustcrawler_controllers.yaml  fake_controllers.yaml  kinect2_sensor.yaml  kinect_sensor.yaml  ompl_planning.yaml
crustcrawler_moveit_config_grasping/launch/: crustcrawler_moveit_controller_manager.launch.xml  crustcrawler_moveit_sensor_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group_no_octomap.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
crustcrawler_real/: CMakeLists.txt  package.xml
crustcrawler_simulator/: CMakeLists.txt  package.xml
moveit_simple_grasps/src/: grasp_filter_test.cpp  simple_grasps_server.cpp  simple_grasps_test.cpp
