<?xml version="1.0"?>
<package>
  <name>crustcrawler_examples</name>
  <version>0.0.0</version>
  <description>The crustcrawler_examples package</description>
  <maintainer email="ghanim@todo.todo">ghanim</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>crustcrawler_core_msgs</build_depend>
  <build_depend>crustcrawler_interface</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>crustcrawler_core_msgs</run_depend>
  <run_depend>crustcrawler_interface</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>xacro</run_depend>

</package>
