<?xml version="1.0"?>
<package>
  <name>crustcrawler_simulator</name>
  <version>0.0.0</version>
  <description>The crustcrawler_simulator package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ghanim@todo.todo">ghanim</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>crustcrawler_control</run_depend>
  <run_depend>crustcrawler_description</run_depend>
  <run_depend>crustcrawler_gazebo</run_depend>
  <run_depend>crustcrawler_interface</run_depend>
  <run_depend>crustcrawler_moveit_config</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
   <metapackage />
  </export>
</package>
